<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7F000000"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:backgroundTintMode="screen"
                android:src="@drawable/backgroung0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/name"
                android:textColor="#FFE0B1"
                android:textSize="72sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7F000000"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/description"
            android:textColor="#D7CCC9"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:paddingTop="20dp"
            android:textStyle="bold"
            android:text="@string/working_days"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:text="@string/working_days_value"
            android:textColor="#C67B0B"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:textStyle="bold"
            android:text="@string/working_hours"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:paddingBottom="10dp"
            android:text="@string/working_hours_value"
            android:textStyle="bold"
            android:textColor="#C67B0B"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:textStyle="bold"
            android:text="@string/website"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:paddingBottom="10dp"
            android:text="@string/website_value"
            android:textStyle="bold"
            android:textColor="#C67B0B"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:textStyle="bold"
            android:text="@string/address"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:paddingBottom="10dp"
            android:text="@string/address_value"
            android:textStyle="bold"
            android:textColor="#C67B0B"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="6dp"
            android:text="@string/contact"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AEB6BA"
            android:paddingLeft="10dp"
            android:text="@string/contact_value"
            android:textStyle="bold"
            android:textColor="#C67B0B"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>

